<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/note"
    tools:context=".MainSearchNotesActivity" >

    <RadioGroup
        android:id="@+id/typeOfNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text" />

        <RadioButton
            android:id="@+id/radioAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio" />

        <RadioButton
            android:id="@+id/radioVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />
    </RadioGroup>
    
    <DatePicker
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/typeOfNote"
        android:layout_below="@+id/typeOfNote"
        android:calendarViewShown="false" />
    
    <Button
        android:id="@+id/searchNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectDate"
        android:layout_below="@+id/selectDate"
        android:layout_marginTop="50dp"
        android:text="@string/search" />

</RelativeLayout>