<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/note"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainCreateNotesActivity" >

    <ImageButton
        android:id="@+id/createTextNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/text" 
        android:contentDescription="@string/create_text_notes"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/createTextNote"
        android:text="@string/create_text_notes"
        android:clickable="false"/>

    <ImageButton
        android:id="@+id/createAudioNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/createTextNote"
        android:layout_marginTop="50dp"
        android:src="@drawable/audio"
        android:contentDescription="@string/create_audio_notes"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/createAudioNote"
        android:text="@string/create_audio_notes"
        android:clickable="false"/>

    <ImageButton
        android:id="@+id/createVideoNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/createAudioNote"
        android:layout_marginTop="50dp"
        android:src="@drawable/video" 
        android:contentDescription="@string/create_video_notes"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/createVideoNote"
        android:text="@string/create_video_notes"
        android:clickable="false"/>

</RelativeLayout>